--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <div class="text-content">
               <h1>Hello,<br>
                 <span id="typed-strings">
+                  <span>Welcome</span>
                   <span>I'm Andrés Paucara</span>
-                  <span>Java Developer</span>
-                  <span>Working as a Freelance</span>
+                  <span>Web Developer</span>
                 </span>
                 <span id="typed"></span>
               </h1>
