--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/images/programacion-web.png" rel="icon">
 
-  <title>Title page</title>  
+  <title>Sobre mi</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -37,14 +37,10 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./index.html" title="">01 : Inicio</a></li>
+          <li><a href="./works.html" title="">02 : Trabajos</a></li>
+          <li><a href="./about.html" title="">03 : Sobre mi</a></li>
         </ul>
-
-
       </div> 
     </div>
   </nav>
@@ -55,23 +51,26 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">01 : About me</h1>
+            <h1 class="h2">03 : Sobre mi</h1>
           </div>
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <h3>Consectetur adipiscing elit</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ultrices hendrerit nisl.</p>
-                  <h3>Ut enim ad minim </h3>
+                  <h3>Presentacion</h3>
+                  <p>Soy un entusiasta del código y un amante del diseño, fusionando ambos mundos para construir sitios web 
+                    que no solo funcionan sin problemas, sino que también cautivan a los usuarios desde el primer vistazo. </p>
+                  <h3>Datos de contacto</h3>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
                   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                   proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-                  <h3>Maecenas luctus at sem quis varius</h3>
+                  <h3>Descargar CV</h3>
                   <p>
-                  Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+                    <a target="_blank" href="https://drive.google.com/file/d/1yqYMTowEXWx9dF1K71yXUuIePKGK5WHE/view">
+                      Click aqui
+                    </a>
+                    </p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
@@ -91,7 +90,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© 2023 Andres Paucara. All Rights Reserved.</p>
       </div>
     </div>
   </div>
