--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/images/programacion-web.png" rel="icon">
 
-  <title>Title page</title>  
+  <title>Inicio</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -37,16 +37,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <!-- 
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          -->
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
         </ul>
-
-
       </div> 
     </div>
   </nav>
@@ -58,10 +49,10 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Hello,<br>
+              <h1>Hola,<br>
                 <span id="typed-strings">
-                  <span>I'm Andrés Paucara</span>
-                  <span>Web Developer</span>
+                  <span>Soy Andrés Paucara</span>
+                  <span>Desarrollador web</span>
                 </span>
                 <span id="typed"></span>
               </h1>
